--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.1] | 2023-07-12
+### Added/Removed
+### Changed
+- Changed build path in dockerfile
+### Fixed
+
 ## [1.0.0] | 2023-07-11
 ### Added/Removed
 - Initialized VNGITBOT subscriber
