Fixed Telegram notification sending multiple messages

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.2] | 2023-07-12
+### Added/Removed
+### Changed
+### Fixed
+- Fixed Telegram notification sending same message when changing multiple image tags
+
 ## [1.0.1] | 2023-07-12
 ### Added/Removed
 ### Changed
