## [1.0.3] | 2023-07-14 ### Added/Removed - Added log info for old tag getting process ### Changed - Changed Dockerfile building in multi-stages - Changed Telegram format - Get version from file ### Fixed

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@ All notable changes to this project will be documented in this file.
 ### Changed
 - Changed Dockerfile building in multi-stages
 - Changed Telegram format
+- Get version from file
 ### Fixed
 
 ## [1.0.2] | 2023-07-12
