## [1.0.4] | 2023-07-21 ### Added/Removed - Added saving message state to MongoDB ### Changed ### Fixed - Fixed getting wrong old tag

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@ All notable changes to this project will be documented in this file.
 - Added saving message state to MongoDB
 ### Changed
 ### Fixed
+- Fixed getting wrong old tag
 
 ## [1.0.3] | 2023-07-14
 ### Added/Removed
