--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.5] | 2023-08-10
+### Added/Removed
+### Changed
+### Fixed
+- Fixed the error creating merge requests existing gets hung
+
 ## [1.0.4] | 2023-07-21
 ### Added/Removed
 - Added saving message state to MongoDB
