--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.6] | 2023-10-09
+### Added/Removed
+### Changed
+### Fixed
+- Fixed blob locating getting wrong service name
+
 ## [1.0.5] | 2023-08-10
 ### Added/Removed
 ### Changed
