--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.7] | 2023-10-12
+### Added/Removed
+- Added more fields to save to database
+### Changed
+### Fixed
+
 ## [1.0.6] | 2023-10-09
 ### Added/Removed
 ### Changed
