--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.9] | 2023-10-17
+### Added/Removed
+### Changed
+- Fixed "missing Location in call to Time.In" error
+### Fixed
+
 ## [1.0.8] | 2023-10-17
 ### Added/Removed
 ### Changed
