--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,12 @@ All notable changes to this project will be documented in this file.
 
 ## [Unreleased]
 
+## [1.0.11] | 2024-03-15
+### Added/Removed
+### Changed
+- Modified regular expression to support new image tag format
+### Fixed
+
 ## [1.0.10] | 2023-11-08
 ### Added/Removed
 ### Changed
